fix link color on mobile

--- a/portfolio_site/style.css
+++ b/portfolio_site/style.css
@@ -405,6 +405,11 @@ em
     text-align: center;
 }
 
+.download_section a:link
+{
+    color: white;
+}
+
 .download_section a:hover
 {
     color: white;
